--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link href='https://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/contrataciones.css" />
+<html lang="es">
+<head>
+	<th:block th:replace="fragments/head.html :: header"/>
+	<link rel="stylesheet" type="text/css" href="css/contrataciones.css">
+</head>
 
 <!-- Header -->
 <header>
-	<div th:replace="fragments.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
+	<div th:replace="fragments/navigation.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
 </header>
 
 <body style="width:100%" class="general">
@@ -123,7 +119,7 @@
 	</div>
 	
 	<!-- Footer -->
-	<footer th:replace="fragments.html :: footer"></footer>
+	<footer th:replace="fragments/navigation.html :: footer"></footer>
 
 	<script>
 
