--- a/src/main/resources/templates/finCampanna.html
+++ b/src/main/resources/templates/finCampanna.html
@@ -2,18 +2,14 @@
 <html lang="es">
 
 <head>
+    <th:block th:replace="fragments/head.html :: header"/>
     <link rel="stylesheet" href="finCampanna.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Aclonica" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="general">
     <!-- Header -->
     <header>
-        <div th:replace="fragments.html :: modalBar(nombrePagina='FIN DE CAMPAÑA')"></div>
+        <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='FIN DE CAMPAÑA')"></div>
     </header>
     <div class="main-content">
         <div class="title">
