--- a/src/main/resources/static/css/fragments.css
+++ b/src/main/resources/static/css/fragments.css
@@ -1,30 +1,3 @@
-.title{
-	height: 100px;
-    background-color: #6ed1dd;
-	display: block;
-}
-
-.brand{
-    font-family: Aclonica;
-    height: 52px;
-    width: 100%;
-    margin-left: 3%;
-    text-align: left;
-    font-size: x-large;
-	margin:auto;
-}
-
-.ulFragment {
-	margin: auto;
-    list-style-type: none;
-    padding: 0;
-	margin: 0em 1em 1em 1em;
-    overflow: hidden;
-    background-color: #6ed1dd;
-    border-radius: 8px;
-    width: fit-content;
-}
-
 li {
   float: left;
   /*border-right:1px solid #bbb;*/
@@ -46,6 +19,59 @@ li a:hover:not(.active) {
   background-color: #1695a5;
 }
 
+.title{
+  height: 100px;
+  background-color: #6ed1dd;
+display: block;
+  padding-left: 0!important;
+}
+
+.brand{
+  font-family: Aclonica;
+  height: 52px;
+  width: 100%;
+  margin-left: 3%;
+  text-align: left;
+  font-size: x-large;
+  margin:auto;
+  margin-left: 1%;
+}
+
+.pageName{
+  color: white !important;
+  font-size: larger;
+  margin: auto;
+  text-align: center;
+}
+
 .active {
   background-color: #1695a5;
 }
+
+.tagsList{
+  padding:1%; 
+  display:flex;
+}
+
+.tagFilterSelected{
+  border-radius:12px;
+  background-color: #6ed1dd!important;
+  min-width: fit-content;
+}
+
+.tagFilter{
+  border-radius:12px;
+  min-width: fit-content;
+}
+
+.ulFragment{
+  margin: auto;
+  list-style-type: none;
+  padding: 0;
+  overflow: hidden;
+  background-color: #6ed1dd;
+  border-radius: 8px;
+  width: fit-content;
+
+}
+
