Cambio de estilo en notificaciones

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -28,8 +28,7 @@
 }
 
 .header-config{
-    background-color: #B9DFE0;                              /*Color que está en los moqups*/
-
+    background-color: #6ed1dd;                             /*Color que está en los moqups*/
 }
 
 .footer-config{
