--- a/src/main/resources/templates/notificaciones.html
+++ b/src/main/resources/templates/notificaciones.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-  <th:block th:replace="fragments/head.html :: header"/>
+  <th:block th:replace="fragments/head.html :: header" />
   <link href="css/notificaciones.css" rel="stylesheet" />
 </head>
 
@@ -17,94 +17,73 @@
     </header>
 
     </header>
-    <div class="tocho">
+    <div class="w3-container">
       <!-- First Notification Grid-->
-      <div class="w3-row-padding">
-        <div>
-          <div class="w3-third w3-container w3-margin-bottom box">
-            <div class="w3-container w3-white info">
-              <input type="checkbox">
-              <p><b>Notificacion 1</b></p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.</p>
-            </div>
-            <div style="text-align: center">
-              <input type="button" name="" value="Borrar" onclick="">
-            </div>
-          </div>
+      <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-pale-blue w3-button w3-large w3-right" onclick="this.parentElement.style.display='none'">X</div>
+        <div class="w3-container w3-pale-blue w3-row w3-center">
+          <h1>Header</h1>
         </div>
-      </div>
-      <div class="w3-row-padding">
-        <div>
-          <div class="w3-third w3-container w3-margin-bottom box">
-            <div class="w3-container w3-white info">
-              <input type="checkbox">
-              <p><b>Notificacion 1</b></p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book.</p>
-            </div>
-            <div style="text-align: center">
-              <input type="button" name="" value="Borrar" onclick="">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w3-row-padding">
-        <div>
-          <div class="w3-third w3-container w3-margin-bottom box">
-            <div class="w3-container w3-white info">
-              <input type="checkbox">
-              <p><b>Notificacion 1</b></p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-                type and scrambled it to make a type specimen book.</p>
-            </div>
-            <div style="text-align: center">
-              <input type="button" name="" value="Borrar" onclick="">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="w3-row-padding">
-        <div>
-          <div class="w3-third w3-container w3-margin-bottom box">
-            <div class="w3-container w3-white info">
-              <input type="checkbox">
-              <p><b>Notificacion 1</b></p>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                galley of type and scrambled it to make a type specimen book.</p>
-            </div>
-            <div style="text-align: center">
-              <input type="button" name="" value="Borrar" onclick="">
-            </div>
-          </div>
+
+        <div class="w3-container w3-pale-blue w3-center">
+          <p>Lorem ipsum...</p>
         </div>
       </div>
 
+      <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-pale-blue w3-button w3-large w3-right" onclick="this.parentElement.style.display='none'">X</div>
+        <div class="w3-container w3-pale-blue w3-row w3-center">
+          <h1>Header</h1>
+        </div>
 
-      <!-- Pagination -->
-      <div class="w3-center w3-padding-32">
-        <div class="w3-bar">
-          <a href="#" class="w3-bar-item w3-button w3-hover-blue">«</a>
-          <a href="#" class="w3-bar-item w3-blue w3-button">1</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-blue">2</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-blue">3</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-blue">4</a>
-          <a href="#" class="w3-bar-item w3-button w3-hover-blue">»</a>
+        <div class="w3-container w3-pale-blue w3-center">
+          <p>Lorem ipsum...</p>
         </div>
       </div>
 
+      <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-pale-blue w3-button w3-large w3-right" onclick="this.parentElement.style.display='none'">X</div>
+        <div class="w3-container w3-pale-blue w3-row w3-center">
+          <h1>Header</h1>
+        </div>
+
+        <div class="w3-container w3-pale-blue w3-center">
+          <p>Lorem ipsum...</p>
+        </div>
+      </div>
+
+      <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
+        <div class="w3-container w3-pale-blue w3-button w3-large w3-right" onclick="this.parentElement.style.display='none'">X</div>
+        <div class="w3-container w3-pale-blue w3-row w3-center">
+          <h1>Header</h1>
+        </div>
+
+        <div class="w3-container w3-pale-blue w3-center">
+          <p>Lorem ipsum...</p>
+        </div>
+      </div>
+
+      <!-- End page content -->
     </div>
-    <!-- End page content -->
-  </div>
-
-  <script>
-
-  </script>
 
 </body>
 
 </html>
+
+<!--
+<div class="w3-row w3-center">
+          <div class="w3-third w3-container w3-center w3-margin-bottom box">
+            <div class="w3-container w3-center w3-white info">
+              <input type="checkbox">
+              <p><b>Notificacion 1</b></p>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.</p>
+            </div>
+            <div style="text-align: center">
+              <input type="button" name="" value="Borrar" onclick="">
+            </div>
+          </div>
+      </div>
+    </div>
+-->
