--- a/src/main/resources/static/css/inicio.css
+++ b/src/main/resources/static/css/inicio.css
@@ -3,30 +3,6 @@
     margin: 0;
 }
 
-.main_header{
-    top: 0px;
-    width: 100%;
-    height: 100px;
-    background-color: #B9DFE0;
-    margin: 0px;
-    
-}
-
-.main_header .header_text{
-    font-family: helvetica;
-    font-size: larger;
-    color: #000000;
-    display: flex;
-    padding-left: 20px;
-    justify-content: left;
-    line-height: 100px;
-}
-
-.main_header .header_img{
-    padding-left: 20px;
-    width: 30px; height: 30px;
-}
-
 
 .title1{
     font-size: x-large;
@@ -54,24 +30,6 @@
     vertical-align: middle;
 }
 
-.footer{
-    background-color: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    color: white;
-    
-}
-
-.footer_text{
-    color: white;
-    text-align: center;
-    width:100%;
-    display: flex;
-    justify-content: center;
-}
-
 a:link, a:visited, a:active{
     text-decoration:none;
     color:white;
@@ -79,56 +37,56 @@ a:link, a:visited, a:active{
 
 .global_div{
     padding: 10px;
+	display:flex;
+	justify-content: center;
+	align-items: center;
 }
 
-.medium_block{
-    padding: 10px;
-    float: left;
-    height: 280px;
+.right_panel{
+	height:600px;
+}
+
+.content{
+	margin-left: 10px;
+}
+
+.control_panel{
+	background-color:  #F7F6F6;
+	height: 280px;
     width: 550px;
-    background-color: #F7F6F6;
-    margin-top: 40px;
-    margin-left: 30px;
-    justify-content: center;    
+	border-radius: 20px;
 }
 
-.proposal_div{
-    padding: 10px;
-    float: right;
-    background-color: #F7F6F6;
-    height: 570px;
+.messages_panel{
+	background-color:  #F7F6F6;
+	height: 530px;
     width: 550px;
-    margin-right: 30px;
-    margin-top: 40px;
-    margin-bottom: 40px;
+	border-radius: 20px;
+	margin-top: 10px;
 }
 
-.message_div{
-    padding: 10px;
-    float: left;
-    height: 480px;
-    width: 550px;
-    background-color: #F7F6F6;
-    margin-top: 40px;
-    margin-left: 30px;
-    justify-content: center;   
-}
-
-.message_block{
+.dark_block{
     background-color: #D6D6D6;
     height: 120px;
-    width: 550px;
+    width: 510px;
     margin-top: 20px;
+	border-radius: 10px;
 }
 
 .button_row_message{
     display: flex;
-    justify-content: center ;
+    justify-content: center;
+}
+
+.button{
+	border-radius: 10px;
+	
 }
 
 .proposal_block{
-    background-color: #D6D6D6;
-    height: 150px;
+    background-color: #F7F6F6;
+    height: 530px;
     width: 550px;
-    margin-top: 20px;
+    margin-top: 10px;
+	border-radius: 20px;
 }
