Fixed footer at inicio.html

--- a/src/main/resources/static/css/inicio.css
+++ b/src/main/resources/static/css/inicio.css
@@ -36,10 +36,7 @@ a:link, a:visited, a:active{
 }
 
 .global_div{
-    padding: 10px;
-	display:flex;
-	justify-content: center;
-	align-items: center;
+	padding-bottom: 69px;
 }
 
 .right_panel{
