--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -14,7 +14,7 @@
 
 <body class="general">
     <!--  -------------------------Cuerpo de la web----------------------------->
-	<div id="page_block" class="w3-row-padding">
+	<div id="page_block" class="w3-row-padding global_div">
 		<div id= "left_panel" class="left_panel column w3-third w3-container">
 			<div id="control_panel" class="control_panel">
 				<div id="content" class="content">
