--- a/src/main/resources/static/css/perfil.css
+++ b/src/main/resources/static/css/perfil.css
@@ -1,254 +1,158 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: "Open Sans",sans-serif;
-    box-sizing: border-box;
-    text-decoration: none;
+:root {
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+* {
+  box-sizing: border-box;
 }
 
-body{
-    background: url(css/bg.jpg) no-repeat center;
-    background-size: cover;
-    min-height:  100vh;
-    align-items: center;
-    justify-content: center;
+body {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100%;
+  overflow-x: hidden;
+  margin: 0;
 }
 
-header{
-    position:fixed;
-    background:#3498DB;
-    width:100%;
-    height:8%;
-    padding:10px;
-    text-align:center;
-    opacity: 0.5;
-    align-items: center;
+main {
+  background-color:#F4F6F6 ;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  width: 100%;
+  align-items: center;
 }
 
-header h1:hover{
-    transform:scale(1.25);
+#valoracion {
+  font-size: 40px;
 }
 
-header h1{
-    transition: 0.35 linear;
-    -webkit-transition: 0.3s linear; 
-    -moz-transition:  0.3s linear;
+header {
+  background-color: #63D6D6;
+  width: 100%;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  display: flex;
 }
 
-
-.profile-card{
-    top:50%;
-    left:50%;
-    margin-top:-250px;
-    margin-left:-200px;
-    width: 420px;
-    overflow: hidden;
-    text-align: center;
-    position:absolute;
-    box-shadow: 0 0 10px #00000070;
+footer,
+header {
+  color: #fafafa;
+  padding: 20px;
+  text-align: center;
 }
 
-.top-section{
-    padding: 60px 40px;
-    background: #2c2c54aa;
-}
-
-.message,.notif{
-    position:absolute;
-    top:40px;
-    font-size: 20px;
-    cursor: pointer;
-    color:#ffffff50;
-}
-
-.message{
-    right:40px;
-}
-
-.notif{
-    left:40px;
-}
-
-.pic{
-    width: 150px;
-    height: 150px;
-    margin: auto;
-    margin-bottom: 20px;
-    border: 2px solid #2c3e50;
-    border-radius:50%;
-    padding: 8px;
-    position:relative;
-}
-
-.pic:after{
-    content:"";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border: 1px solid #2c3e50;
-    left: 0;
-    top: 0;
-    box-sizing: border-box;
-    border-radius: 50%;
-    animation: wave 1.5s infinite linear;
-}
-
-@keyframes wave{
-    to{
-        transform: scale(1.5);
-        opacity: 0;
-    }
-}
-
-.pic img{
-    width: 100%;
-    height: 100%;
-    border-radius:50%;
-}
-
-.name{
-    color: #f1f1f1;
-    font-size: 28px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-}
-
-.tag{
-    font-size: 18px;
-    color: #222;
-}
-
-.bottom-section{
-    background: #f1f1f1;
-    padding: 60px 40px;
-    position:relative;
-    display:flex;
-    align-items:center;
-    justify-content: center;
-    font-size: 28px;
-    text-transform: uppercase;
-    height: 130px;
-}
-
-.border{
-    width: 1px;
-    height: 20px;
-    background: #bbb;
-    margin: 0 30px;
-}
-
-.bottom-section span{
-    font-size: 14px;
-    display: block;
-}
-
-.social-media{
-    position:absolute;
-    width: 100%;
-    top: -30px;
-    left: 0;
-    z-index: 1;
-}
-
-.social-media i{
-    width: 60px;
-    height: 60px;
-    background: #2c3e50;
-    border-radius: 50%;
-    color: #f1f1f1;
-    font-size: 20px;
-    line-height: 60px !important;
-    margin: 0 10px;
-    position: relative;
-}
-
-.social-media i:after{
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: #2c3e50;
-    left: 0;
-    top: 0;
-    box-sizing: border-box;
-    border-radius: 50%;
-    z-index: -1;
-    transition: 0.4s linear;
-}
-
-.social-media i:hover:after{
-    transform: scale(1.4);
-    opacity:0;
-}
-
-/*Tags*/
-.tag-list{
-    position:absolute;
-    margin-top:130px;
-    margin-left:20px;
-    width: 150px;
-    text-align:center;
-}
-
-.tag-list li{
-    border: 2px black solid;
-    padding:5px;
-    cursor:pointer;
-    background-color: #5DADE2;
-    opacity:0.9;
-    list-style: none;
-}
-
-/* Acordeon/Menu desplegable */
-dl{ margin-top:130px;margin-left:20px; width: 350px; float:right; }
-dt, dd{ padding: 20px; }
-dt{ background: #333333; color: white; border-bottom: 1px solid #141414; border-top: 1px solid #4E4E4E; cursor: pointer; }
-dd{ background: #F5F5F5; line-height: 1.6em; }
-dt.activo, dt:hover{ background: #424242; }
-dt:before{ content: "▸"; margin-right: 10px; }
-dt.activo:before{ content: "▾"; }
-
-
-/*Footer*/
 footer{
-    background-color: black;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    color: white;
-    opacity:0.8;
-    align-items: center;
+	background-color:#566573 ;
+}
+#tags {
+  min-width: 250px;
+  width: 30%;
+}
+#tags ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: space-around;
+  margin-left: -30px;
+  width: 100%;
 }
 
-.footer_text{
-    color: white;
-    text-align: center;
-    width:100%;
-    display: flex;
-    justify-content: center;
-    position:fixed;
+#tags li {
+  border: 1px solid black;
+  background-color: #d5dbdb;
+  padding: 3px 15px;
+  display: inline-block;
+  border-radius: 4px;
+  margin:3px;
 }
 
-/*Estrellas*/
 
-.ec-stars-wrapper {
-	font-size: 0;
-	display: inline-block;
-}
-.ec-stars-wrapper a {
-	text-decoration: none;
-	display: inline-block;
-	font-size: 32px;
-	font-size: 2rem;
-	
-	color: #888;
+#propuestas li {
+  border: 1px solid #000;
+  list-style-type: none;
+  text-align: center;
+  margin-left: -30px;
+  padding: 5px;
+  transition: 0.2s ease-in;
+  background-color: #d5dbdb;
 }
 
-.ec-stars-wrapper:hover a {
-	color: rgb(39, 130, 228);
+#propuestas span {
+  font-weight: 700; 
+}
+#propuestas li:hover {
+  background-color: aqua;
 }
 
-.ec-stars-wrapper > a:hover ~ a {
-	color: #888;
+#edad {
+  margin-bottom: 15px;
 }
+
+#edad-media {
+  border: 1px solid black;
+  text-align: center;
+  padding: 4px;
+  font-weight: 700;
+}
+
+#seguidores {
+  width:30%;
+  border: 1px solid black;
+  border-radius:10px;
+  padding: 6px;
+  display:flex;
+  flex-direction:column;
+  text-align:center;
+}
+
+#seguidores ul {
+  list-style-type: none;
+  display:flex;
+}
+
+#seguidores span {
+  font-weight: 700;
+}
+
+.numeroseguidores{
+	margin-left:10px;
+}
+
+#principal {
+  text-align: center;
+}
+
+#editar{
+  padding: 10px;
+  margin-right:10px;
+  box-sizing: content-box   ;
+  border-radius: 3px;
+  color: #3a3a3a;
+  display: inline-block;
+  background: skyblue;
+  height: 20px;
+  border: 1px solid #ccc;
+  transition: 0.35s ease-in-out;
+}
+
+
+#editar:hover {
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  transform: scale(0.8); 
+}
+
+#atras:hover{
+	transform: scale(1.2);
+}
+
+#tags li:hover{
+	transform: scale(1.2);
+}
+
