--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -1,78 +1,67 @@
-<!doctype html>
-<html lang="es">
-
-<head>
-    <th:block th:replace="fragments/head.html :: header"/>
-    <link rel="stylesheet" href="css/perfil.css">
-</head>
-
-<body class="general">
-    <!-- Header -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Perfil de influencer</title>
+    <link rel="stylesheet" type="text/css" href="css/perfil.css" />
+  </head>
+  <body>
     <header>
-        <div th:replace="fragments/navigation.html :: modalBar(nombrePagina='PERFIL')"></div>
+        <a  id="atras" href=""><img src="img/flecha-atras.png" width="30"/></a>
+      <h1>Perfil</h1>
+      <span id="editar" class="button"><a href="/editar">Editar</a></span>
     </header>
-    <div class="profile-card">
-        <div class="top-section">
-            <i class="message fas fa-envelope"> </i>
-            <i class="notif fas fa-bell"> </i>
-            <div class="pic">
-                <img src="css/pic.jpg" alt="">
-            </div>
-            <div class="name">Influency</div>
-            <div class="tag">@Influency</div>
-            <div class="ec-stars-wrapper">
-                <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
-                <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
-                <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
-                <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
-                <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
-            </div>
-        </div>
-        <div class="bottom-section">
-            <div class="social-media">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fas fa-link"></i></a>
-            </div>
-
-            <div class="videos">190<span>Videos</span></div>
-            <div class="border"></div>
-            <div class="subscribers">204k<span>Subscribers</span></div>
-            <div class="border"></div>
-            <div class="views">7.3M<span>Views</span></div>
-        </div>
-    </div>
-    <div class="tag-list">
+    <main>
+      <section id="principal">
+        <img id="imagen-perfil" src="img/profile.png" width="200"/>
+        <h2>Pepito</h2>
+        <div id="valoracion">★★★✰✰</div>
+      </section>
+      <section id="tags">
         <ul>
-            <li>
-                Tag 1
-            </li>
-            <li>
-                Tag 2
-            </li>
-            <li>
-                Tag 3
-            </li>
-            <li>
-                Tag 4
-            </li>
+          <li>Tag1</li>
+          <li>Tag2</li>
+          <li>Tag3</li>
+          <li>Tag4</li>
         </ul>
-    </div>
-    <dl>
-        <dt>Propuesta 1</dt>
-        <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur maxime cupiditate nesciunt molestias
-            itaque vel reiciendis</dd>
-
-        <dt>Propuesta 2</dt>
-
-        <dt>Propuesta 3</dt>
-
-        <dt>Propuesta 4</dt>
-
-        <dt>Propuesta 5</dt>
-    </dl>
-    
-</body>
-
+      </section>
+      <section id="propuestas">
+        <span>Historial de propuestas</span>
+        <ul>
+          <li>Propuesta1</li>
+          <li>Propuesta2</li>
+          <li>Propuesta3</li>
+          <li>Propuesta4</li>
+        </ul>
+      </section>
+      <section id="edad">
+        <h3>Edad media de los seguidores</h3>
+        <div id="edad-media">17 años</div>
+      </section>
+      <section id="seguidores">
+        <span>Seguidores en redes sociales</span>
+        <ul>
+          <li>
+           <a href="twitter.com">@pepitoTwitter</a>
+            <span class="numeroseguidores"> 200k </span>
+            <img src="img/twitter.png"   width="20"/>
+          </li>
+          <li>
+            <a href="youtube.com">@pepitoYT</a>
+            <span class="numeroseguidores"> 250k </span>
+            <img src="img/youtube.png"  width="20" />
+          </li>
+          <li>
+            <a href="instagram.com">@pepitoIG</a>
+            <span class="numeroseguidores"> 192k </span>
+            <img src="img/instagram.png" width="20" />
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      Influencing - Términos y condiciones - Contáctanos
+    </footer>
+  </body>
 </html>
