--- a/src/main/resources/templates/contrataciones.html
+++ b/src/main/resources/templates/contrataciones.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<th:block th:replace="fragments/head.html :: header"/>
-	<link rel="stylesheet" type="text/css" href="css/contrataciones.css">
+<th:block th:replace="fragments/head.html :: header"/>
+<link rel="stylesheet" type="text/css" href="css/contrataciones.css">
 </head>
-
-<!-- Header -->
-<header>
-	<div th:replace="fragments/navigation.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
-</header>
-
 <body style="width:100%" class="general">
+
+<div>
+	<!-- Header -->
+	<header>
+		<div th:replace="fragments/navigation.html :: navBar(nombrePagina='CONTRATACIONES')"></div>
+		<div th:replace="fragments/navigation.html :: tagBar"></div>
+	</header>
+
+
 <!-- !PAGE CONTENT! -->
 <div>
 	<h1 style="font-family: 'ABeeZee';margin: 2%;">Contrataciones en vigor</h1>
@@ -120,7 +123,7 @@
 
 <!-- Footer -->
 <footer th:replace="fragments/navigation.html :: footer"></footer>
-
+</div>
 </body>
 
 </html>
