Arreglada query Evento

--- a/src/main/resources/templates/negociacion.html
+++ b/src/main/resources/templates/negociacion.html
@@ -35,6 +35,8 @@
                         <a href="" class="boton">Enviar Ultimatum</a>
                     </div>
                 </div>
+				<tableclass="datatable" id="datatable">
+				</table>
                 <p class="mensaje recibido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit,
                     vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt
                     id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit, et lacinia ipsum quam
@@ -65,5 +67,7 @@
     </main>
     <div th:replace="fragments/navigation.html :: footer"></div>
 </body>
+
+
 
 </html>
