--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -3,7 +3,8 @@
 <!--  SDF-->
 <head>
     <th:block th:replace="fragments/head.html :: header"/>
-    <link href="css/administracion.css" rel="stylesheet">
+    <link href="css/administracion.css" rel="stylesheet"
+
 </head>
 
 <body class="general">
