--- a/src/main/resources/static/css/negociacion.css
+++ b/src/main/resources/static/css/negociacion.css
@@ -67,7 +67,7 @@ ul {
 .lista {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 
