--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -27,7 +27,6 @@
                     <form>
                         <input type="text" class="textoBusqueda" placeholder="  Nombre de usuario">
                         <input type="submit" value="Buscar" class="btnEnviar">
-                        <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Open Modal</button>
                     </form>
                 </div>
 				<div class="dropdown">
@@ -38,7 +37,7 @@
 							<div class="dropdown-notificaciones" th:each="notificacion: ${notificaciones}">
 								<p th:text="${notificacion.descripcion}">Notificacion</p>
 							</div>
-							<a href="" onclick="document.getElementById('id01').style.display='block'" class="dropdown-boton"> Ver todas</a>
+							<span onclick="document.getElementById('id01').style.display='block'" class="dropdown-boton"> Ver todas</span>
 						</div>
 						<div class="dropdown-element">
 							<a href="" class="dropdown-boton"> Cerrar sesion</a>
@@ -73,18 +72,8 @@
 
         <div id="id01" class="w3-modal">
             <div class="w3-modal-content">
-              <header class="w3-container w3-teal"> 
-                <span onclick="document.getElementById('id01').style.display='none'" 
-                class="w3-button w3-display-topright">&times;</span>
-                <h2>Modal Header</h2>
-              </header>
-              <div class="w3-container">
-                <p>Some text..</p>
-                <p>Some text..</p>
-              </div>
-              <footer class="w3-container w3-teal">
-                <p>Modal Footer</p>
-              </footer>
+
+				<div th:replace="notificaciones.html :: notificaciones"></div>
             </div>
         </div>
     </main>
