--- a/src/main/resources/templates/administracion.html
+++ b/src/main/resources/templates/administracion.html
@@ -73,7 +73,7 @@
         <div id="id01" class="w3-modal">
             <div class="w3-modal-content">
 
-				<div th:replace="notificaciones.html :: notificaciones"></div>
+				<div th:replace="notificaciones.html :: notificaciones(notificaciones=${notificaciones})"></div>
             </div>
         </div>
     </main>
