--- a/src/main/resources/templates/notificaciones.html
+++ b/src/main/resources/templates/notificaciones.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<div th:fragment="notificaciones">
+<div th:fragment="notificaciones (notificaciones)">
 
   <head>
     <th:block th:replace="fragments/head.html :: header" />
@@ -18,55 +18,22 @@
       </header>
 
       </header>
-      <div class="w3-container">
+      <div class="w3-container" th:each="notificacion: ${notificaciones}">
         <!-- First Notification Grid-->
-        <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
-          <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
-            onclick="this.parentElement.style.display='none'">X</div>
-          <div class="w3-container w3-pale-blue w3-row w3-center">
-            <h1>Header</h1>
-          </div>
 
-          <div class="w3-container w3-pale-blue w3-center">
-            <p>Lorem ipsum...</p>
-          </div>
-        </div>
 
         <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
           <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
             onclick="this.parentElement.style.display='none'">X</div>
           <div class="w3-container w3-pale-blue w3-row w3-center">
-            <h1>Header</h1>
+            <h1 th:text="${notificacion.descripcion}">Header</h1>
           </div>
 
           <div class="w3-container w3-pale-blue w3-center">
-            <p>Lorem ipsum...</p>
+            <p th:text="${notificacion.fecha}">Lorem ipsum...</p>
           </div>
         </div>
 
-        <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
-          <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
-            onclick="this.parentElement.style.display='none'">X</div>
-          <div class="w3-container w3-pale-blue w3-row w3-center">
-            <h1>Header</h1>
-          </div>
-
-          <div class="w3-container w3-pale-blue w3-center">
-            <p>Lorem ipsum...</p>
-          </div>
-        </div>
-
-        <div class="w3-card-4 w3-round w3-margin-top w3-margin-bottom">
-          <div class="w3-container w3-pale-blue w3-button w3-large w3-right"
-            onclick="this.parentElement.style.display='none'">X</div>
-          <div class="w3-container w3-pale-blue w3-row w3-center">
-            <h1>Header</h1>
-          </div>
-
-          <div class="w3-container w3-pale-blue w3-center">
-            <p>Lorem ipsum...</p>
-          </div>
-        </div>
 
         <!-- End page content -->
       </div>
